# cmd/synced/docs/swagger.json
@@ -935,7 +935,7 @@
             }
         },
         "/mcontract/list/{account}": {
-            "get": {
+            "post": {
                 "security": [
                     {
                         "ApiKeyAuth": []
@@ -958,6 +958,15 @@
                         "name": "account",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "请求信息",
+                        "name": "prequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.PageRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -1027,6 +1036,61 @@
                 }
             }
         },
+        "/mcontract/template/function/insert": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "contractTemplate"
+                ],
+                "summary": "合约模板方法导入",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "合约方法描述",
+                        "name": "description",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "合约方法参数",
+                        "name": "args",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "合约方法名称",
+                        "name": "name",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "合约方模板Id",
+                        "name": "template_id",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/mcontract/template/get/{id}": {
             "get": {
                 "security": [
@@ -1063,8 +1127,70 @@
                 }
             }
         },
+        "/mcontract/template/insert/{account}": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "contractTemplate"
+                ],
+                "summary": "合约模板导入",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "账户名称",
+                        "name": "account",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "file",
+                        "description": "合约文件",
+                        "name": "codefile",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "合约描述",
+                        "name": "description",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "合约语言",
+                        "name": "language",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "合约名称",
+                        "name": "name",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/mcontract/template/list/{account}": {
-            "get": {
+            "post": {
                 "security": [
                     {
                         "ApiKeyAuth": []
@@ -1085,8 +1211,16 @@
                         "type": "string",
                         "description": "账户名",
                         "name": "account",
-                        "in": "path",
-                        "required": true
+                        "in": "path"
+                    },
+                    {
+                        "description": "请求信息",
+                        "name": "prequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.PageRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -1647,6 +1781,17 @@
                 },
                 "threshold": {
                     "description": "公钥列表",
+                    "type": "integer"
+                }
+            }
+        },
+        "api.PageRequest": {
+            "type": "object",
+            "properties": {
+                "page_num": {
+                    "type": "integer"
+                },
+                "page_size": {
                     "type": "integer"
                 }
             }
